k8s/color-showcase/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: color-showcase
  labels:
    app.kubernetes.io/name: color-showcase
