k8s/color-showcase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-showcase
  labels:
    app.kubernetes.io/name: color-showcase
    app.kubernetes.io/part-of: argocd-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: color-showcase
  ports:
    - name: http
      port: 80
      targetPort: http
