k8s/color-showcase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-showcase
  labels:
    app.kubernetes.io/name: color-showcase
    app.kubernetes.io/part-of: argocd-demo
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: color-showcase
                port:
                  name: http
